--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tailwindcss": "^3.6.0",
+    "formik": "^2.2.9",
     "hamburger-react": "^2.5.0",
     "next": "12.2.3",
     "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
