--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-to-top": "^3.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
