--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tailwindcss": "^3.6.0",
     "formik": "^2.2.9",
+    "framer-motion": "^7.3.2",
     "hamburger-react": "^2.5.0",
     "next": "^12.2.5",
     "prettier": "^2.7.1",
