--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint",
     "codegen": "contentful-typescript-codegen --output types/generated/contentful.d.ts"
   },
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@contentful/rich-text-types": "^15.12.1",
@@ -21,6 +27,8 @@
     "framer-motion": "^7.3.2",
     "hamburger-react": "^2.5.0",
     "next": "^12.2.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.1",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
