--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "codegen": "contentful-typescript-codegen --output types/generated/contentful.d.ts"
@@ -27,6 +28,7 @@
     "framer-motion": "^7.3.2",
     "hamburger-react": "^2.5.0",
     "next": "^12.2.5",
+    "next-sitemap": "^3.1.22",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.8.1",
     "prettier": "^2.7.1",
