--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,4 +17,7 @@
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
