--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,12 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
-.env*.local
+# .env
+# .env*.local
 
 # vercel
 .vercel
+vercel.json
 
 # typescript
 *.tsbuildinfo
