--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "codegen": "contentful-typescript-codegen --output types/generated/contentful.d.ts"
   },
   "browserslist": [
